<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registerFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment">

    <EditText
        android:id="@+id/editName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="204dp"
        android:ems="10"
        android:hint="@string/enter_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#7986CB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editPassword2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/enter_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#7986CB"
        app:layout_constraintStart_toStartOf="@+id/editName2"
        app:layout_constraintTop_toBottomOf="@+id/editName2" />

    <TextView
        android:id="@+id/errorTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/eight_character_minimum"
        android:textColor="@color/red"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/editPassword2"
        app:layout_constraintTop_toBottomOf="@+id/editPassword2" />

    <EditText
        android:id="@+id/editPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/enter_phonenumber"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#7986CB"
        app:layout_constraintStart_toStartOf="@+id/editPassword2"
        app:layout_constraintTop_toBottomOf="@+id/editPassword2" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="32dp"
        android:enabled="false"
        android:text="@string/register"
        app:layout_constraintBottom_toTopOf="@+id/registerCancelButton"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/contentDescription"
        android:src="@mipmap/ic_launcher_test_round"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/registerCancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="148dp"
        android:layout_marginBottom="140dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
