<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="280dp"
    android:orientation="vertical"
    android:tag="smsdialog">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/contentDescription"
        android:src="@mipmap/ic_launcher_test_round" />

    <TextView
        android:id="@+id/smsMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity=""
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/smsRequired"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity=""
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/smsMsg"
        android:textSize="18sp" />


</LinearLayout>