<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="2dp"
    app:cardBackgroundColor="@color/cardViewLight"
    app:contentPadding="10dp">

    <GridLayout
        android:id="@+id/item_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:useDefaultMargins="true"
        android:alignmentMode="alignBounds"
        android:columnOrderPreserved="false"
        android:columnCount="3">


        <TextView
            android:id="@+id/idTextView"
            android:layout_width="162dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            tools:text="Item Name" />

        <TextView
            android:id="@+id/qtyTextView"
            android:layout_width="162dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:text="@string/zero"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            tools:text="Item Qty" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_gravity="center_horizontal"
            android:height="48dp"
            android:text="@string/delete"
            />

        <Button
            android:id="@+id/increaseButton"
            android:layout_width="60dp"
            android:layout_height="48dp"
            android:layout_row="1"
            android:layout_column="1"
            android:height="48dp"
            android:textSize="20sp"
            android:gravity="fill"
            android:text="@string/increment"
            />


        <Button
            android:id="@+id/decreaseButton"
            android:layout_width="60dp"
            android:layout_height="48dp"
            android:layout_row="1"
            android:layout_column="2"
            android:height="48dp"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            android:text="@string/decrement"
            />

    </GridLayout>


</androidx.cardview.widget.CardView>